# kevboy

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Trunk.toml  index.html  rustfmt.toml
.github/workflows/: main.yml
assets/: fairylake.gb  sw.js
src/: cpu.rs  emulator.rs  main.rs  opcode.rs  registers.rs  ui.rs
src/apu/: apu.rs  mod.rs
src/cartridge/: base_cartridge.rs  mod.rs
src/cartridge/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  no_mbc.rs
src/cpu/: bus.rs  cpu.rs  interrupts.rs  mod.rs  registers.rs
src/cpu/debug/: json_tests.rs  mod.rs
src/input/: joypad.rs
src/mmu/: bus.rs  hdma_transfer.rs  mmio.rs  mod.rs  serial.rs  timer.rs
src/ppu/: color_palette.rs  color_pallette.rs  mod.rs  ppu.rs  ppu_regs.rs  sprite.rs  tile_attributes.rs
src/ui/: control_panel.rs  frame_history.rs  memory_viewer.rs  mod.rs  palette_picker.rs  sound_settings.rs  ui.rs
