[package]
name = "kevboy"
version = "0.2.1"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.68"
eframe = {version = "0.22.0", features = ["persistence", "glow", "default_fonts"], default-features = false}
egui = { version = "0.22.0", features = ["serde"] }
egui_extras = { version = "0.22.0", features = ["svg"] }
hashlink = { version = "0.8.1", features = ["serde", "serde_impl"] }
image = "0.24.5"
rfd = "0.11.4"
rodio = "0.17.0"
serde = "1.0.152"

[dev-dependencies]
log = "0.4.17"
simple_logger = "2.3.0"
