[package]
name = "kevboy"
version = "0.3.0"
edition = "2021"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1.0.68"
eframe = {version = "0.22.0", features = ["persistence"] }
egui = { version = "0.22.0", features = ["serde"] }
egui-phosphor = "0.2.0"
egui_extras = { version = "0.22.0", features = ["svg"] }
gilrs = { version = "0.10.2", features = ["serde-serialize"] }
hashlink = { version = "0.8.1", features = ["serde", "serde_impl"] }
image = "0.24.5"
rfd = "0.11.4"
rodio = { version = "0.17.0", default-features = false }
serde = "1.0.152"
